--- a/style.css
+++ b/style.css
@@ -9,67 +9,6 @@ body{
 }
 
 
-#swiper-container2{
-    width: 1000px;
-    height:auto;
-    margin-top:20px;
-    justify-content: center;
-}
-
-#mySwiper2 {
-    position: relative;
-    width:1000px;
-}
-
-.swiper_header{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 15px;
-}
-
-#swiper-wrapper2{
-    padding-bottom: 2rem;
-
-}
-
-#swiper-wrapper2 .swiper-slide {
-    font-size: 18px;
-    background: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-#swiper-wrapper2 .swiper-slide img {
-    text-align: center;
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-
-.swiper-tile{
-    font-size: 23px;
-    font-family: inherit;
-    color: black;
-}
-
-.swiper_art_title {
-    font-size: 18px;
-    font-family: inherit;
-    color: black;
-    text-decoration: dashed;
-    margin-top: 10px;
-
-    text-align: center;
-}
-
-
-
 
 
 
@@ -619,7 +558,7 @@ body{
 
 
 
-/*Style the big video carousel  METTI A POSTOOOOOOO LE ICONE SI SPOSTANOOO PROVA A USARE MEDIA QUERY*/
+/*Style the big video carousel */
 .video-carousel-container{
     display: flex;
     flex-direction: column;
@@ -657,6 +596,11 @@ body{
     left: 30px;
     transform: translate(-50%, 50%);
 
+}
+
+ .big-play img{
+    width: 60px;
+    height: 60px;
 }
 
 
@@ -746,6 +690,72 @@ body{
     height: 80px;
 }
 
+.logo-footer img{
+    width: 200px;
+    height: 40px;
+}
+
+
+/* STyle the swiper "Argomenti" */
+
+
+#swiper-container2{
+    width: 1000px;
+    height:auto;
+    margin-top:20px;
+    justify-content: center;
+}
+
+#mySwiper2 {
+    position: relative;
+    width:1000px;
+}
+
+.swiper_header{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 15px;
+}
+
+#swiper-wrapper2{
+    padding-bottom: 2rem;
+
+}
+
+#swiper-wrapper2 .swiper-slide {
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+#swiper-wrapper2 .swiper-slide img {
+    text-align: center;
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+
+.swiper_art_title {
+    font-size: 18px;
+    font-family: inherit;
+    color: black;
+    text-decoration: dashed;
+    margin-top: 10px;
+
+    text-align: center;
+}
+
+
+
+
 /*  PER LA ROBA PER ULTIM'ORA
 .container {
     position: relative;
@@ -760,7 +770,7 @@ body{
 }
 */
 
-/* classes for js */
+/* Classes for js */
 
 .fc1 {
     display: none;
@@ -896,10 +906,16 @@ body{
         right:60px;
     }
 
-    .big-play{
+     .big-play img{
         width: 45px;
         height: 45px;
     }
+
+
+     .logo-footer img{
+         width: 180px;
+         height: 35px;
+     }
 
 }
 
